# aoc-2023

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.py
aoc2023/: __init__.py  create_new_day.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_11.py
aoc2023/util/: __init__.py  day_template.txt  print_solutions.py  test_template.txt
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_11.py
