[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

dependencies = [
  "pytest",
  "ipython",
  "ruff",
  "mypy",
  "numpy",
]

[tool.ruff]
extend-select = ["I"]
line-length = 120
indent-width = 4

target-version = "py311"

exclude = [
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
